--- a/backend/TodoApp.Core.Service.Task/TodoApp.Core.Service.Task.csproj
+++ b/backend/TodoApp.Core.Service.Task/TodoApp.Core.Service.Task.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="../TodoApp.Core.Protos/task.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
