--- a/backend/TodoApp.Core.Service.Task/TodoApp.Core.Service.Task.csproj
+++ b/backend/TodoApp.Core.Service.Task/TodoApp.Core.Service.Task.csproj
@@ -12,6 +12,12 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoApp.Core.Infraestructure\TodoApp.Core.Infraestructure.csproj" />
   </ItemGroup>
 
 </Project>
